--- a/src/main/resources/view/main_scene_view.fxml
+++ b/src/main/resources/view/main_scene_view.fxml
@@ -164,7 +164,8 @@
                     <MenuItem mnemonicParsing="false" onAction="#aplicarHough" text="Hough" />
                 </items>
             </Menu>
-
+            <MenuItem mnemonicParsing="false" onAction="#onAplicarContornosActivos" text="Contornos Activos" />
+            <MenuItem mnemonicParsing="false" onAction="#onApplyActiveContourOnImageSequence" text="Active Contour on Image Sequence" />
         </Menu>
         <Menu mnemonicParsing="false" text="Anistropía">
             <MenuItem mnemonicParsing="false" onAction="#onAplicarDifusion" text="Difusión" />
